--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://juliolilo.github.io/Sabacc",
+  "homepage": "http://juliolilo.github.io/Sabacc",
   "name": "sabacc",
   "version": "0.1.0",
   "private": true,
